# bevy-jam-2-tba

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CI.md  index.html
.cargo/: config.toml
.github/workflows/: ci.yaml  publish.itch.io.yaml  release.yaml
organisation/Code/: Systems & Components.md
organisation/Concept/: Short Design Document.md
organisation/Decisions/: 2022-08-19_kickoff.md  2022-12-30.md
src/: blob.rs  block.rs  bodies.rs  data.rs  field.rs  field_element.rs  game.rs  game_assets.rs  hud.rs  input.rs  level.rs  lib.rs  main.rs  movement.rs  player_state.rs  render_old.rs  state.rs  target.rs  tool.rs  turn.rs  view.rs
src/data/: assets.rs  bodies.rs  level.rs
src/field/: blob.rs  field_element.rs  target.rs  tool.rs
