[package]
name = "bevy_jam_2_disastris"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Disassemble the useless input blob that was delivered and combine the parts to something beautiful!"
authors = ["Gereon Bartel", "Tim Janus", "Philipp Sieweck"]

[lib]
name = "bevy_jam_2_disastris_lib"
path = "src/lib.rs"

[[bin]]
name = "bevy_jam_2_disastris"
path = "src/main.rs"


# use basic optimizations for development (set to zero if compile times are to long)
[profile.dev]
opt-level = 0

# use full optimization on every dependent package during development 
# (bevy and other dependencies are optimized in debug builds as a side-effect
# this raises compile time when dependencies changes (full recompile takes ages)
[profile.dev.package."*"]
opt-level = 3
# debug = false

[dependencies.bevy]
version = "0.8"
# See https://github.com/bevyengine/bevy/blob/main/docs/cargo_features.md for a list of features
default-features = false
features = ["render", "bevy_asset", "bevy_winit", "png"]

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.8"
default-features = false
features = ["x11"]

[dependencies]
bevy-inspector-egui = { version = "0.12.1", optional = true }
leafwing-input-manager = "0.5.1"
rand = "0.8.5"
itertools = "0.10.3"

[features]
default = []
debug = ["bevy-inspector-egui"]