[package]
name = "bevy_jam_2_disastris"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Disassemble the useless input blob that was delivered and combine the parts to something beautiful!"
authors = ["Gereon Bartel", "Tim Janus", "Philipp Sieweck"]

[lib]
name = "bevy_jam_2_disastris_lib"
path = "src/lib.rs"

[[bin]]
name = "bevy_jam_2_disastris"
path = "src/main.rs"

# patch for wasm builds described in bevy-jam-2 email
# https://github.com/bevyengine/bevy/issues/5426#issuecomment-1227275839
#[patch.crates-io]
#wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }

# use basic optimizations for development (set to zero if compile times are to long)
[profile.dev]
opt-level = 0

# use full optimization on every dependent package during development 
# (bevy and other dependencies are optimized in debug builds as a side-effect
# this raises compile time when dependencies changes (full recompile takes ages)
[profile.dev.package."*"]
opt-level = 3
# debug = false

[dependencies.bevy]
version = "0.10.0"
# See https://github.com/bevyengine/bevy/blob/main/docs/cargo_features.md for a list of features
default-features = false
features = ["bevy_asset", "bevy_core_pipeline", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_winit", "png"]

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.10.0"
default-features = false
features = ["x11"]

[dependencies]
clap = {version = "4.1.6", features = ["default", "derive"]}
bevy-inspector-egui = { version = "0.18.0", optional = true }
leafwing-input-manager = "0.9.0"
rand = "0.8.5"
itertools = "0.10.3"
bevy_tweening = "0.7.0"
interpolation = "*"

[features]
default = []
debug = ["bevy-inspector-egui"]
