[workspace]
resolver = "2"

[package]
name = "bevy_jam_2_disastris"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Disassemble the useless input blob that was delivered and combine the parts to something beautiful!"
authors = ["Gereon Bartel", "Tim Janus", "Philipp Sieweck"]

[lib]
name = "bevy_jam_2_disastris_lib"
path = "src/lib.rs"

[[bin]]
name = "bevy_jam_2_disastris"
path = "src/main.rs"

# patch for wasm builds described in bevy-jam-2 email
# https://github.com/bevyengine/bevy/issues/5426#issuecomment-1227275839
#[patch.crates-io]
#wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }

# use basic optimizations for development (set to zero if compile times are to long)
[profile.dev]
opt-level = 0

# use full optimization on every dependent package during development 
# (bevy and other dependencies are optimized in debug builds as a side-effect
# this raises compile time when dependencies changes (full recompile takes ages)
[profile.dev.package."*"]
opt-level = 3
# debug = false

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1

[dependencies.bevy]
version = "0.12.1"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
]

# Dependencies for native only.
#[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
#version = "0.12.1"
#default-features = false
#features = [""]

[dependencies]
# See https://github.com/bevyengine/bevy/blob/main/docs/cargo_features.md for a list of features
clap = { version = "4.1.6", features = ["default", "derive"] }
bevy-inspector-egui = { version = "0.21.0", optional = true }
leafwing-input-manager = "0.11.1"
rand = "0.8.5"
itertools = "0.12.0"
bevy_tweening = "0.9.0"
interpolation = "0.2"

[features]
default = []
debug = ["bevy-inspector-egui"]

[build-dependencies]
embed-resource = "1.4"
